classDiagram
  class APISchema {
  }
  class ApiRoot {
    config
    name : str
    version : str
  }
  class ProduceParams {
    values : List[JSONSerializable]
  }
  class ProduceResponse {
    params
    results : List[ProducerPayload]
  }
  ApiRoot --|> APISchema
  ProduceParams --|> APISchema
  ProduceResponse --|> APISchema
  ProduceParams --* ProduceResponse : params
